# demo_app_backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.minio  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3b8d8f6c2f81_create_news_table.py  d2985fbb083c_create_banners_table.py
src/: admin.py  config.py  main.py  session.py  storage.py
src/basic/: __init__.py
src/basic/data/: __init__.py  models.py  repositories.py
src/basic/domain/: controller.py  schemas.py
src/basic/views/: __init__.py  router.py
templates/sqladmin/: banner_details.html  banner_edit.html
